# ros2_aeb_simulation

./: .gitignore  Dockerfile  README.md  SIMULATION_PHYSICS.md  cyclone_config.xml  docker-compose.yaml
aeb_ws/src/: setup.py
aeb_ws/src/aeb_simulation/: package.xml  setup.cfg  setup.py
aeb_ws/src/aeb_simulation/aeb_simulation/: aeb_decision_node.py  brake_actuator_node.py  lidar_sim_node.py  logger_node.py  shutdown_node.py  vehicle_speed_node.py  vehicle_state_node.py
aeb_ws/src/aeb_simulation/config/: params.yaml
aeb_ws/src/aeb_simulation/launch/: aeb.launch.py
aeb_ws/src/launch/: aeb.launch.py
