<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>aeb_simulation</name>
  <version>0.1.0</version>
  <description>Autonomous Emergency Braking simulation using ROS2 nodes</description>

  <maintainer email="mortatha.dhahri@enicar.ucar.tn">Mortadha Dhahri</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>